--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.1
   lottie: ^3.1.0
   geocoding: ^2.2.0
+  provider: ^6.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
